src/objects/Expense__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trip_Date__c</fullName>
        <label>Trip Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_of_Meeting__c</fullName>
        <label>Type of Meeting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Engagement</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Expense</label>
    <nameField>
        <label>Expense  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Amount_greater_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Amount__c &lt; 1, True, False)</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>Amount should be greater than Zero.</errorMessage>
    </validationRules>
</CustomObject>